[gd_scene load_steps=2 format=3 uid="uid://cq1y43i5uxsrn"]

[ext_resource type="Script" path="res://ui/activity_duration_vbox.gd" id="1_xioua"]

[node name="ActivityDurationVBox" type="VBoxContainer"]
script = ExtResource("1_xioua")

[node name="ActivityDurationLabel" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "1h 15min"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActivityDurationSlider" type="HSlider" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
value = 20.0

[node name="EstimatedCompletionTimeLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
theme_type_variation = &"LabelSmall"
text = "Estimated time of completion: 11:20 AM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoldKeyDelayTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="RepeatKeyTimer" type="Timer" parent="."]
wait_time = 0.035

[connection signal="value_changed" from="ActivityDurationSlider" to="." method="_on_activity_duration_slider_value_changed"]
[connection signal="timeout" from="HoldKeyDelayTimer" to="." method="_on_hold_key_delay_timer_timeout"]
[connection signal="timeout" from="RepeatKeyTimer" to="." method="_on_repeat_key_timer_timeout"]
